--- a/components/Homepage/Hero/Hero.module.css
+++ b/components/Homepage/Hero/Hero.module.css
@@ -9,6 +9,7 @@
 }
 
 .home {
+  text-align: center;
   margin: 100px 0;
 }
 
